--- a/Client/Restaurant.Client/Restaurant/packages.config
+++ b/Client/Restaurant.Client/Restaurant/packages.config
@@ -19,5 +19,6 @@
   <package id="Rx-Main" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
   <package id="Splat" version="1.3.3" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Xamarin.Forms" version="2.0.1.6505" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Xam.Plugins.Forms.ImageCircle" version="1.3.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Xamarin.Forms" version="2.1.0.6526" targetFramework="portable45-net45+win8+wp8" />
 </packages>
