--- a/Server/Restaurant.Server/Web.config
+++ b/Server/Restaurant.Server/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -9,8 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="RestaurantSqlConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Restaurant.Server-20160211112751.mdf;Initial Catalog=aspnet-Restaurant.Server-20160211112751;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="Entities" connectionString="metadata=res://*/Models.EntityModel.csdl|res://*/Models.EntityModel.ssdl|res://*/Models.EntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Restaurant.Server-20160211112751.mdf;initial catalog=aspnet-Restaurant.Server-20160211112751;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="RestaurantSqlConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Restaurant.Server-20160211112751.mdf;Initial Catalog=aspnet-Restaurant.Server-20160211112751;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="Entities" connectionString="metadata=res://*/Models.EntityModel.csdl|res://*/Models.EntityModel.ssdl|res://*/Models.EntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Restaurant.Server-20160211112751.mdf;initial catalog=aspnet-Restaurant.Server-20160211112751;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="RestaurantServerContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=RestaurantServerContext-20160226151022; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|RestaurantServerContext-20160226151022.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
