--- a/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
+++ b/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
@@ -272,6 +272,9 @@
     <AndroidResource Include="Resources\drawable-xhdpi\ic_plus.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\ic_plus.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_plus.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_more_vert_white.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_more_vert_white.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_more_vert_white.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Restaurant\Restaurant.csproj">
