--- a/Server/Restaurant.Server/Restaurant.Server.csproj
+++ b/Server/Restaurant.Server/Restaurant.Server.csproj
@@ -239,6 +239,7 @@
     <Compile Include="Controllers\BaseApiContoller.cs" />
     <Compile Include="Controllers\FoodsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
